# profile

./: .circle.yml  .csslintrc  .editorconfig  .gitignore  .htmlhintrc  Dockerfile  Gruntfile.coffee  LICENSE  Makefile  Procfile  README.md  build.gradle  build.sbt  circle.yml  composer.json  go.mod  go.sum  handler.go  index.html  main.py  manifest.yml  package.json  pelicanconf.py  preprocessing.py  pyproject.toml  server.go  settings.gradle
.ci/: build.sh  deployed.sh
.circleci/: config.yml  setup-retry.sh
.openshift/: nginx.conf.erb
.openshift/action_hooks/: build
app/: ErrorHandler.scala  Module.scala  build.gradle  index.php  routes.php
app/container/: view.php
app/controllers/: StaticPageController.scala
app/filters/: Filter.scala
app/models/: Background.scala  Page.scala
app/views/: anime.scala.html  background.php  index.scala.html  last_modified.php  light_novel.scala.html  link.scala.html  main.scala.html  menu.php  menu.scala.html  mountain.scala.html  (+3 more)
backend/: .gitignore  env.go  go.mod  go.sum  server.go  template.go
conf/: application.conf  nginx.conf  php-fastcgi  routes
config/: findbugs-exclude.xml
data/: climbed_mountain.yml  cordillera.yml  mountain.yml  mountain_cordillera.yml
project/: plugins.sbt
public/: index.php
site/: browser_warning.inc  config.php  index.css  index.inc  index.php  index_lte_ie6.css  index_lte_ie6.js  index_lte_ie7.css  index_lte_ie8.css  last_modified.sh
templates/: base.html
views/: 404.html  anime.html  index.html  light_novel.html  link.html  program.html  site_info.html
(+93 files in other folders)
